Fix post title.

--- a/data/items.toml
+++ b/data/items.toml
@@ -21,9 +21,9 @@ alt = "Summer tones"
 description = "This wall is a well-used canvas, and the location of several large pieces. The use of the yellow diagonals is intriguing."
 url = ""
 [[items]]
-title = "Hugrid Theme"
+title = "Thumbs up"
 image = "images/full/4.jpg"
 thumb = "images/thumbs/4.jpg"
-alt = "Hugrid Theme"
+alt = "Thumbs up"
 description = "By restricting the palette, the emphasis shifts to shape and contrast, but ultimately it is the expression in this example that makes it stand out."
 url = ""
