--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ publishdir = "public"
     buttontext = "Read more"
 
     # Footer text
-    footertext = """Site powered by [Hugo](http://gohugo.io).
+    footertext = """Site built with [Hugo](http://gohugo.io). Powered by Pi.
     Theme by [Codrops](http://tympanus.net/codrops/2013/03/19/thumbnail-grid-with-expanding-preview/)
     and [Pavel Kanyshev](https://github.com/aerohub)"""
 
