--- a/data/items.toml
+++ b/data/items.toml
@@ -62,3 +62,17 @@ image = "images/full/9f.jpg"
 thumb = "images/thumbs/9t.jpg"
 alt = "Corn"
 description = "On a run in the countryside, quite far from populated areas and in the snow, what do I find but a half-eaten cob of corn. I was quite unsure what to make of it, and it was quite vivid after seeing nothing but white for an hour or so."
+
+[[items]]
+title = "Bench"
+image = "images/full/10f.jpg"
+thumb = "images/thumbs/10t.jpg"
+alt = "Bench"
+description = "The park bench, in my experience, does not normally attract hashtags, or other graffiti notable enough for me to remember. Perhaps this is a pioneering example."
+
+[[items]]
+title = "Bike"
+image = "images/full/11f.jpg"
+thumb = "images/thumbs/11t.jpg"
+alt = "Bike"
+description = "A rather well-used sign here. I wonder what the criteria are for the replacement of stickers, or indeed whether criteria for any aspect of this enterprise exist. Perhaps it is ironic, or maybe just interesting, that the existence of the graffiti and the stickers, coupled with the faded and somewhat whitewashed brickwork, only serve to increase the prominence of the sign."
