--- a/data/items.toml
+++ b/data/items.toml
@@ -118,3 +118,10 @@ image = "images/full/17f.jpg"
 thumb = "images/thumbs/17t.jpg"
 alt = "Commentary"
 description = "Clearly not a painting, I almost dismissed this as litter whilst out on a morning run. But observe the arrangement of the items of food: the bag is open to reveal its contents; the straws form an arrow; the chips almost form some letters. Its placement between the surfaced road and the bare earth appears to be deliberate too -- perhaps the direction of the arrow illustrates the relentless march of progress towards modernity, but the rubbish alerts us to the waste that is often left behind."
+
+[[items]]
+title = "Roach"
+image = "images/full/18f.jpg"
+thumb = "images/thumbs/18t.jpg"
+alt = "Roach"
+description = "Quite a prolific motif recently, this has very little to offer the world. With the exception of the arrow-styled 'A', there is no interest offered to the viewer."
