--- a/data/items.toml
+++ b/data/items.toml
@@ -132,3 +132,10 @@ image = "images/full/19f.jpg"
 thumb = "images/thumbs/19t.jpg"
 alt = "Numbers"
 description = "With a fairly simple palette, it's surprising how much this piece stands out. The numbers of the title take some time to appear to the viewer, and it is unclear if it is 113 or 713. As for the spots or bubble-type features, one is left wondering whether or not they were part of the original design, or an afterthought. Notice too how nature is in conflict with this piece."
+
+[[items]]
+title = "Smile"
+image = "images/full/20f.jpg"
+thumb = "images/thumbs/20t.jpg"
+alt = "Smile" 
+description = "An unassuming scribble and diminutive in size, this brightened up an otherwise dull day."
